--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "html-webpack-plugin": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0",
+    "react-router-dom": "^5.3.0",
+    "webpack": "^5.59.0",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
   "devDependencies": {
