--- a/package.json
+++ b/package.json
@@ -26,20 +26,25 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
     "@popperjs/core": "^2.10.2",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.5.0",
+    "js-md5": "^0.7.3",
     "rea": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "universal-cookie": "^4.0.4",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "css-loader": "^6.5.1",
     "mini-css-extract-plugin": "^2.4.4",
     "style-loader": "^3.3.1"
