--- a/app_frontend/package.json
+++ b/app_frontend/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.1.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.5.0",
+    "jquery": "^3.6.0",
     "js-md5": "^0.7.3",
     "rea": "^0.0.1",
     "react": "^17.0.2",
