--- a/server_backend/package.json
+++ b/server_backend/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "universal-cookie": "^4.0.4"
   }
 }
